fixed layout issues with domain

--- a/css/styles.css
+++ b/css/styles.css
@@ -102,10 +102,10 @@ a {
 
 .badge {
     border-radius: 20px;
-    padding: 0.5rem 2rem;
-    font-weight: 600;
+    padding: 0.5rem 1rem;
+    font-weight: 400;
     white-space: nowrap;
-    font-size: 2rem;
+    font-size: 1.8rem;
 }
 
 .badge--primary {
@@ -123,9 +123,10 @@ a {
     padding: 0.5rem 1.5rem;
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 768px) {
     .badge {
         font-size: 1.5rem;
+        padding: 0.5rem 2rem;
     }
 
     .badge--small {
@@ -210,11 +211,18 @@ a {
     margin: 1rem 0;
 }
 
-.btn .icon {
+.btn--icon {
+    padding: 1rem 1rem;
+}
+
+.btn--icon .icon {
     width: 2rem;
     height: 2rem;
-    margin-right: 1rem;
     vertical-align: middle;
+}
+
+.btn--icon .icon + .btn__text {
+    display: none;
 }
 
 .btn--primary {
@@ -265,6 +273,19 @@ a {
     padding-right: 6rem;
 }
 
+@media screen and (min-width: 768px) {
+    .btn--icon .icon + .btn__text {
+        display: inline-block;
+    }
+    .btn--icon .icon {
+        margin-right: 1rem;
+    }
+
+    .btn--icon {
+        padding: 2rem 3rem;
+    }
+}
+
 @media screen and (min-width: 1024px) {
     .btn {
         font-size: 1.5rem;
@@ -277,9 +298,10 @@ a {
     border-radius: var(--border-radius);
     border: 1px solid var(--color-border);
     color: var(--color-headings);
-    font-size: 2rem;
+    font-size: 1.5rem;
     outline: 0;
-    padding: 1.5rem 3.5rem;
+    padding: 0rem 3.5rem;
+    overflow: scroll;
 }
 
 ::placeholder {
@@ -290,6 +312,7 @@ a {
     border: 1px solid var(--color-border);
     border-radius: var(--border-radius);
     display: flex;
+    justify-content: space-between;
 }
 
 .input-group .input {
@@ -724,7 +747,7 @@ a {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 6rem);
-    font-size: 2rem;
+    font-size: 0.5rem;
     font-weight: 600;
     justify-items: center;
     max-width: 700px;
